@@ -41,6 +41,13 @@ Fix rt.cpan.org #31425
 Fix rt.cpan.org #31042
     Makefile corrected to add a library target.
 
+Fix rt.cpan.org #29818
+    10-recurse.t used to fail in very specific environment (where a query for
+    qname="." and qtype="NS" would return with an empty additional section).
+    Fixed by adding the hints explicitly; this also forces the tests to take
+    place under the root served by a-m.root-servers.net
+    
+
 Fix rt.cpan.org #29877
     Made 00-version.t recognize a "GIT" environment.
 
@@ -49,7 +56,11 @@ Fix rt.cpan.org #29878
 
     SPF.pm did not evaluate as true. Thanks Bjorn Hansen.
 
-Fix various tests so they are more robust (Ask Bjoern Hansen)
+Fix rt.cpan.org #29883
+    Fix various tests only available through SVN, so they are 
+    more robust (Acknowledgements Bjoern Hansen)
+
+
 
 Fix rt.cpan.org #29531
    Nameserver.pm, Packet.pm and Question.pm modified to avoid erroneous PTR
